; ModuleID = '/home/carl/AnghaBench/git/vcs-svn/extr_fast_export.c_fast_export_ls_rev.c'
source_filename = "/home/carl/AnghaBench/git/vcs-svn/extr_fast_export.c_fast_export_ls_rev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fast_export_ls_rev(i32 %0, i8* %1, i32* %2, %struct.strbuf* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.strbuf*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store %struct.strbuf* %3, %struct.strbuf** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @ls_from_rev(i32 %9, i8* %10)
  %12 = call i32 (...) @get_response_line()
  %13 = load i32*, i32** %7, align 8
  %14 = load %struct.strbuf*, %struct.strbuf** %8, align 8
  %15 = call i32 @parse_ls_response(i32 %12, i32* %13, %struct.strbuf* %14)
  ret i32 %15
}

declare dso_local i32 @ls_from_rev(i32, i8*) #1

declare dso_local i32 @parse_ls_response(i32, i32*, %struct.strbuf*) #1

declare dso_local i32 @get_response_line(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
